# word-count

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
src/: utils.py  word_count.py
tests/: test_utils.py
